src/snapshots/lsp_client__jsonrpc_types__tests__notification_serde-2.snap
---
source: src/jsonrpc_types.rs
expression: "Notification::new(\"method\", vec![0, 1])"
---
{
  "jsonrpc": "2.0",
  "method": "method",
  "params": [
    0,
    1
  ]
}
