src/snapshots/lsp_client__jsonrpc_types__tests__notification_serde.snap
---
source: src/jsonrpc_types.rs
expression: "Notification::new(\"method\", ())"
---
{
  "jsonrpc": "2.0",
  "method": "method",
  "params": null
}
