src/snapshots/lsp_client__jsonrpc_types__tests__request_serde-2.snap
---
source: src/jsonrpc_types.rs
expression: "Request::new(\"method\", (), Some(1))"
---
{
  "jsonrpc": "2.0",
  "method": "method",
  "params": null,
  "id": 1
}
