src/snapshots/lsp_client__jsonrpc_types__tests__request_serde-4.snap
---
source: src/jsonrpc_types.rs
expression: "Request::new(\"method\", vec![0, 1], Some(1))"
---
{
  "jsonrpc": "2.0",
  "method": "method",
  "params": [
    0,
    1
  ],
  "id": 1
}
