src/snapshots/lsp_client__jsonrpc_types__tests__request_serde-5.snap
---
source: src/jsonrpc_types.rs
expression: "Request::new(\"method\", Params { p0: 0, p1: 1 }, None)"
---
{
  "jsonrpc": "2.0",
  "method": "method",
  "params": {
    "p0": 0,
    "p1": 1
  },
  "id": null
}
