src/snapshots/lsp_client__jsonrpc_types__tests__request_serde.snap
---
source: src/jsonrpc_types.rs
expression: "Request::new(\"method\", (), None)"
---
{
  "jsonrpc": "2.0",
  "method": "method",
  "params": null,
  "id": null
}
